--- a/projects/password_generator/sass/style.sass
+++ b/projects/password_generator/sass/style.sass
@@ -85,6 +85,15 @@ input,textarea,select,button
 .weak::before
 	width: 20%
 	background: red
+	transition: width .3s ease
+
+.medium::before
+	width: 50%
+	background: orange
+
+.strong::before
+	width: 100%
+	background: green
 
 .pass-length
 	margin-bottom: 25px
